--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -146,6 +146,12 @@ nav ul li a:hover {
 
 }
 
+.run-buddy img {
+    height:100%;
+    width:100%;
+    object-fit: cover;
+        
+}
 .contact h2 {
     text-decoration: underline;
     margin-bottom: 15px;
