--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -122,12 +122,16 @@ nav ul li a:hover {
     width: 100%;
 }
 
-#project2 {
+#project_2 {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: space-evenly;
     margin: 0 auto;
+}
+
+.proj2 img {
+    height: 100%;
 }
 
 
